前端学院第十六天 添加点击事件

--- a/OPOD 7.29/selfIntro.html
+++ b/OPOD 7.29/selfIntro.html
@@ -5,6 +5,8 @@
     <title>我的个人简历</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <script src="http://how2j.cn/study/js/jquery/2.0.0/jquery.min.js"></script>
+    <script src="selfIntro.js"></script>
 </head>
 <body>
 
@@ -17,7 +19,8 @@
     </div>
     <div class="col-md-8 header-right myInfo">
         <span class="myname">Hi,I am sky</span>
-        <span class="myjob">Future Web Designer and Developer</span>
+        <button id="sayHi">Hi</button>
+        <span class="myjob" style="display: none">Future Web Designer and Developer</span>
         <div class="line"></div>
         <table class="infoTable">
             <tr>
@@ -124,7 +127,6 @@
               <P style="color:#999999">Compter Science And Technology</P>
           </div>
         </div>
-
     </div>
 
     <div class="EducationContent row">
